# BiDi-Coherence-Delta-Calculus

./: .gitattributes  .gitignore  BIDI_CALCULUS_CORE.md  BIDI_COHERENCE_DELTA_CALCULUS.md  BRIDGE_RUNTIME.md  CDC_LANGUAGE.md  CDC_MEMORY_MANIFOLD_INTERFACE.md  CDC_TOOLCHAIN_PLAN.md  CITATION.cff  FORMAL_SEMANTIC_SPINE.md  FRAMEWORKS.md  NATIVE_SELF_HOSTING_MANDATE.md  README.md  TERNARY_TRACE_WINDOW_SEMANTICS.md  VERIFICATION_OBLIGATION_MATRIX.md  acceptance.py  bidi_calculus.py  bridge4096.cdc  bridge512.cdc  bridge64.cdc  calculus_laws.py  cdc_boot.py  cdc_semantics.py  council_bridge.cdc  framework_deliberative.cdc  framework_episodic.cdc  framework_loop.cdc  framework_procedural.cdc  framework_transition.cdc  kernel.cdc  laws.cdc  native_reducer.cdc  native_surface.cdc  pyproject.toml  relation_witness.py  relations.cdc  system.cdc  trace_window_witness.py  trace_windows.cdc
.github/workflows/: ci.yml  formal-gate.yml
assets/identity/: README.md
demo/: index.html  mobius-identity.html  replay.json
docs/identity/: ETELLIS_XYZ_IDENTITY_INTEGRATION_DRAFT.md  MOBIUS_IDENTITY_WORKING_HANDOFF_2026-07-22.md  MOBIUS_INTERNAL_SYSTEM_FOLD_MAP.md  MOBIUS_SYMBOL_MEANING_AND_ASSET_HANDOFF_FOR_CLAUDE.md  MOBIUS_U_BLENDER_PIPELINE.md  MOBIUS_U_GEOMETRY_SPEC.md  MOBIUS_U_IDENTITY_SYSTEM.md  MOBIUS_U_INTEGRATION.md  MOBIUS_U_LANGUAGE_AND_REPOSITORY_INTEGRATION.md  MOBIUS_U_MIGRATION_AUDIT.md  MOBIUS_U_MOTION_SPEC.md  MOBIUS_U_RECONCILED_SOURCE_OF_TRUTH.md  MOBIUS_U_VISUAL_REFINEMENT_WORKING_PAPER.md  README.md
formal/coq/: CDCFinite.v
formal/lean/: CDCFinite.lean
paper/: README.md
paper/arxiv/: README.md  main.tex
runtime/: cdc_abi.c  cdc_abi.h  cdc_ast.c  cdc_ast.h  cdc_bridge_runtime.c  cdc_diagnostic.c  cdc_diagnostic.h  cdc_frontend_check.c  cdc_lexer.c  cdc_lexer.h  cdc_native_runtime.c  cdc_parser.c  cdc_parser.h  cdc_registry.c  cdc_registry.h  cdc_wasm_exports.c
runtime/toolchain/: cmd_test.c  cmd_test.h  cmd_verify.c  cmd_verify.h  main.c
scripts/: build_identity_3d.sh  release_identity_3d.sh  render_identity_motion.sh  verify.sh  verify_identity_3d.sh
tools/blender/: build_mobius_glyph_identity.py  build_mobius_identity.py  render_mobius_identity.py  validate_mobius_identity.py
(+27 files in other folders)
